--- a/src/index.css
+++ b/src/index.css
@@ -77,13 +77,13 @@
   translate: -50% -10%;
   height: 180%;
   width: auto;
-  object-position: calc(50% + (var(--x) * 40px)) calc(50% + (var(--y) * 10px));
+  transform: translate(calc(var(--x) * 40px), calc(var(--y) * 10px));
   object-fit: contain;
   user-select: none;
   pointer-events: none;
   z-index: 2;
   filter: drop-shadow(0 20px 40px rgba(0, 0, 0, 0.2));
-  transition: object-position 0.3s ease-out;
+  transition: transform 0.8s cubic-bezier(0.33, 1, 0.68, 1);
 }
 
 .hero-title {
@@ -95,8 +95,8 @@
   text-transform: uppercase;
   font-family: "Bebas Neue", sans-serif;
   color: white;
-  translate: calc(-50% + (var(--x) * -30px)) calc(var(--y) * -20px);
-  transition: translate 0.3s ease-out;
+  transform: translate(calc(-50% + var(--x) * -30px), calc(var(--y) * -20px));
+  transition: transform 0.8s cubic-bezier(0.33, 1, 0.68, 1);
   z-index: 4;
 }
 
