--- a/src/index.css
+++ b/src/index.css
@@ -171,6 +171,10 @@
   --chart-5: 41 80% 65%;
 }
 
+.bg-grid-white {
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32' width='32' height='32' fill='none' stroke='rgb(255 255 255 / 0.02)'%3e%3cpath d='M0 .5H31.5V32'/%3e%3c/svg%3e");
+}
+
 body {
   margin: 0;
   min-width: 320px;
