--- a/src/index.css
+++ b/src/index.css
@@ -195,6 +195,118 @@ body {
 }
 
 @layer utilities {
+  .app-container {
+    @apply w-full flex flex-col h-screen bg-background transition-all duration-200 max-w-[1800px];
+  }
+
+  .app-header {
+    @apply flex justify-between items-center w-full p-4 md:p-6 relative;
+  }
+
+  .app-header-left {
+    @apply flex items-center flex-grow;
+  }
+
+  .app-name {
+    @apply text-foreground m-0 text-xl font-bold mx-8;
+  }
+
+  .search-wrapper {
+    @apply rounded-full bg-accent/50 pr-3 h-10 flex justify-between items-center w-full max-w-md text-muted-foreground overflow-hidden;
+  }
+
+  .search-input {
+    @apply border-none flex-1 outline-none h-full px-5 text-sm bg-transparent;
+  }
+
+  .app-header-right {
+    @apply flex items-center;
+  }
+
+  .app-sidebar {
+    @apply py-10 px-4 flex flex-col items-center;
+  }
+
+  .app-sidebar-link {
+    @apply text-muted-foreground my-4 transition-all duration-200 rounded-full flex-shrink-0 w-10 h-10 flex justify-center items-center hover:bg-accent hover:text-foreground;
+  }
+
+  .app-sidebar-link.active {
+    @apply bg-primary text-primary-foreground;
+  }
+
+  .projects-section {
+    @apply flex-[2] bg-card rounded-[2rem] p-8 pb-0 overflow-hidden h-full flex flex-col;
+  }
+
+  .projects-section-line {
+    @apply flex justify-between items-center pb-8;
+  }
+
+  .projects-status {
+    @apply flex;
+  }
+
+  .item-status {
+    @apply flex flex-col mr-4 relative;
+  }
+
+  .status-number {
+    @apply text-2xl font-bold text-foreground;
+  }
+
+  .status-type {
+    @apply text-muted-foreground relative pr-6;
+  }
+
+  .view-actions {
+    @apply flex items-center;
+  }
+
+  .project-boxes {
+    @apply -mx-2 overflow-y-auto;
+  }
+
+  .project-boxes.jsGridView {
+    @apply flex flex-wrap;
+  }
+
+  .project-boxes.jsGridView .project-box-wrapper {
+    @apply w-1/3;
+  }
+
+  .project-box {
+    @apply rounded-[2rem] p-4 bg-accent/10;
+  }
+
+  .project-box-header {
+    @apply flex items-center justify-between mb-4 text-foreground;
+  }
+
+  .box-progress-wrapper {
+    @apply mt-4;
+  }
+
+  .box-progress-bar {
+    @apply w-full h-1 rounded-full bg-background/50 my-2 overflow-hidden;
+  }
+
+  .box-progress {
+    @apply block h-1 rounded-full;
+  }
+
+  .project-box-footer {
+    @apply flex justify-between items-center mt-4 pt-4 relative border-t border-border/10;
+  }
+
+  .participants {
+    @apply flex items-center;
+  }
+
+  .days-left {
+    @apply bg-background/10 text-xs rounded-full px-4 py-1 font-medium;
+  }
+
   .bento-grid {
     @apply grid;
     grid-template-columns: repeat(3, 1fr);
