--- a/src/index.css
+++ b/src/index.css
@@ -199,22 +199,28 @@ div[style*="z-index: 999999"] {
 
 .hero-highlight {
   display: inline-block;
-  background: transparent;
   padding: 0.1em 0.3em;
-  border-radius: 0;
   position: relative;
-  color: white;
+  color: hsl(var(--foreground));
 }
 
 .hero-highlight::after {
   content: '';
   position: absolute;
-  left: 0;
-  top: 0;
+  left: -0.2em;
+  top: -0.1em;
   width: 100%;
   height: 100%;
-  background: rgb(255, 98, 0);
+  padding: 0.2em;
+  border: 2px solid rgb(255, 98, 0);
+  transform: skew(-8deg);
   z-index: -1;
+  transition: all 0.3s ease;
+}
+
+.hero-highlight:hover::after {
+  transform: skew(-12deg) scale(1.05);
+  border-width: 3px;
 }
 
 .hero-content {
