--- a/src/index.css
+++ b/src/index.css
@@ -213,13 +213,12 @@ div[style*="z-index: 999999"] {
   height: 100%;
   padding: 0.2em;
   border: 2px solid rgb(255, 98, 0);
-  transform: skew(-8deg);
   z-index: -1;
   transition: all 0.3s ease;
 }
 
 .hero-highlight:hover::after {
-  transform: skew(-12deg) scale(1.05);
+  transform: scale(1.05);
   border-width: 3px;
 }
 
