--- a/src/index.css
+++ b/src/index.css
@@ -199,7 +199,7 @@ div[style*="z-index: 999999"] {
 
 .hero-highlight {
   display: inline-block;
-  padding: 0.1em 0.3em;
+  padding: 0;
   position: relative;
   color: hsl(var(--foreground));
 }
@@ -207,11 +207,10 @@ div[style*="z-index: 999999"] {
 .hero-highlight::after {
   content: '';
   position: absolute;
-  left: -0.2em;
-  top: -0.1em;
-  width: 100%;
-  height: 100%;
-  padding: 0.2em;
+  left: -4px;
+  top: -2px;
+  width: calc(100% + 8px);
+  height: calc(100% + 4px);
   border: 2px solid rgb(255, 98, 0);
   z-index: -1;
   transition: all 0.3s ease;
